--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,8 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="icon" href="<%= BASE_URL %>gzcl.svg">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>gzcl.svg">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>gzcl.png">
     <title>GZCL</title>
   </head>
   <body>
